test: add unit tests